# Document-Q-A-System

./: .coverage  .gitignore  README.md  docker-compose.yml
.kiro/specs/document-qa-system/: design.md  requirements.md  tasks.md
backend/: .env  Dockerfile  README.md  RUN_API.md  pyproject.toml  pytest.ini  requirements.txt  test_api_startup.py  verify_core_components.py
backend/app/: __init__.py  api.py  config.py  dependencies.py  document_processor.py  embedding_service.py  file_storage.py  llm_service.py  main.py  middleware.py  models.py  pdf_extractor.py  rag_engine.py  text_chunker.py  vector_store.py
backend/data/: .gitkeep
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_api_integration.py  test_config.py  test_document_processor.py  test_embedding_service.py  test_file_storage.py  test_file_storage_integration.py  test_integration.py  test_llm_service.py  test_rag_engine.py  test_vector_store.py
